(WARN = This commit does not work) Post functionality implemented + bug fixes